Fix text alignment to center on index page

--- a/styles.css
+++ b/styles.css
@@ -4,8 +4,7 @@
     text-align: center;
 }
 
-.index,
-.chaliapin-steak-don > ul {
+.index> ul {
     display: inline-block;
     text-align: justify;
     text-justify: inter-word;
